# vtensor

./: CMakeLists.txt  README.md  adam_updater.cpp  adam_updater.h  add2.cpp  add2.h  base_data_generator.h  base_initializer.h  base_train.cpp  base_train.h  base_updater.cpp  base_updater.h  const_initializer.cpp  const_initializer.h  conv2d.cpp  conv2d.h  ctc_loss.cpp  ctc_loss.h  data_generator.cpp  data_generator.h  demo.cpp  depthwise_conv2d.cpp  depthwise_conv2d.h  linear.cpp  linear.h  mul2.cpp  mul2.h  ndarray.cpp  ndarray.h  network.cpp  network.h  node.cpp  node.h  randn_initializer.cpp  randn_initializer.h  sigmoid.cpp  sigmoid.h  tanh.cpp  tanh.h  tensor.cpp  (+11 more)
