cmake_minimum_required (VERSION 2.6)
project (vtensor)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3 DNDEBUG")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -DNDEBUG")
add_compile_options(-std=c++11)
AUX_SOURCE_DIRECTORY(. DIR_SRCS)
include_directories(eigen .)
# add_library(vtensor SHARED ${DIR_SRCS})
add_executable(vtensor ${DIR_SRCS})